--- a/index.html
+++ b/index.html
@@ -681,12 +681,26 @@
         letter-spacing: 0.5px;
         opacity: 0.9;
         margin-bottom: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .address-label::after {
+        content: '(Automático)';
+        font-size: 10px;
+        font-weight: 500;
+        opacity: 0.7;
+        text-transform: none;
+        letter-spacing: 0;
     }
 
     .address-text {
         font-size: 15px;
         font-weight: 500;
         line-height: 1.5;
+        user-select: none;
+        pointer-events: none;
     }
 
     .address-icon {
@@ -1631,9 +1645,9 @@
                 </div>
             </div>
 
-            <!-- Display do Endereço -->
+            <!-- Display do Endereço (Apenas informativo - não editável) -->
             <div class="address-display" id="address-display">
-                <div class="address-label">📍 Endereço do Cliente</div>
+                <div class="address-label">📍 Endereço Identificado pelo QR Code</div>
                 <div class="address-text" id="address-text"></div>
             </div>
 
