--- a/index.html
+++ b/index.html
@@ -6232,66 +6232,102 @@ const resultDetails = document.getElementById('result-details');
 
 // Abrir modal de upload
 function openUploadModal() {
-    modalUploadSpreadsheet.classList.add('active');
-    document.body.style.overflow = 'hidden';
+    console.log('Abrindo modal de upload...');
 
-    // Resetar estados
+    // Resetar estados PRIMEIRO
     uploadArea.style.display = 'block';
     uploadProgress.style.display = 'none';
     uploadResult.style.display = 'none';
     progressBar.style.width = '0%';
     fileInput.value = '';
+
+    // Depois abrir o modal
+    modalUploadSpreadsheet.classList.add('active');
+    document.body.style.overflow = 'hidden';
 }
 
 // Fechar modal de upload
 function closeUploadModal() {
+    console.log('Fechando modal de upload...');
     modalUploadSpreadsheet.classList.remove('active');
     document.body.style.overflow = '';
+
+    // Resetar estados ao fechar também
+    setTimeout(() => {
+        uploadArea.style.display = 'block';
+        uploadProgress.style.display = 'none';
+        uploadResult.style.display = 'none';
+        progressBar.style.width = '0%';
+        fileInput.value = '';
+    }, 300); // Após animação do modal
 }
 
-// Event listeners do modal
-btnUploadSpreadsheet.addEventListener('click', openUploadModal);
-btnModalUploadClose.addEventListener('click', closeUploadModal);
-btnUploadCancel.addEventListener('click', closeUploadModal);
+// Event listeners do modal (protegido contra duplicação)
+if (!btnUploadSpreadsheet._hasUploadListener) {
+    btnUploadSpreadsheet.addEventListener('click', openUploadModal);
+    btnUploadSpreadsheet._hasUploadListener = true;
+}
 
-modalUploadSpreadsheet.addEventListener('click', (e) => {
-    if (e.target === modalUploadSpreadsheet) {
-        closeUploadModal();
-    }
-});
+if (!btnModalUploadClose._hasCloseListener) {
+    btnModalUploadClose.addEventListener('click', closeUploadModal);
+    btnModalUploadClose._hasCloseListener = true;
+}
 
-// Click na área de upload
-uploadArea.addEventListener('click', () => {
-    fileInput.click();
-});
+if (!btnUploadCancel._hasCancelListener) {
+    btnUploadCancel.addEventListener('click', closeUploadModal);
+    btnUploadCancel._hasCancelListener = true;
+}
 
-// Drag and drop
-uploadArea.addEventListener('dragover', (e) => {
-    e.preventDefault();
-    uploadArea.classList.add('dragover');
-});
+if (!modalUploadSpreadsheet._hasClickListener) {
+    modalUploadSpreadsheet.addEventListener('click', (e) => {
+        if (e.target === modalUploadSpreadsheet) {
+            closeUploadModal();
+        }
+    });
+    modalUploadSpreadsheet._hasClickListener = true;
+}
 
-uploadArea.addEventListener('dragleave', () => {
-    uploadArea.classList.remove('dragover');
-});
+// Click na área de upload (protegido contra duplicação)
+if (!uploadArea._hasClickListener) {
+    uploadArea.addEventListener('click', () => {
+        fileInput.click();
+    });
+    uploadArea._hasClickListener = true;
+}
 
-uploadArea.addEventListener('drop', (e) => {
-    e.preventDefault();
-    uploadArea.classList.remove('dragover');
+// Drag and drop (protegido contra duplicação)
+if (!uploadArea._hasDragListeners) {
+    uploadArea.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        uploadArea.classList.add('dragover');
+    });
 
-    const files = e.dataTransfer.files;
-    if (files.length > 0) {
-        handleFile(files[0]);
-    }
-});
+    uploadArea.addEventListener('dragleave', () => {
+        uploadArea.classList.remove('dragover');
+    });
 
-// Seleção de arquivo
-fileInput.addEventListener('change', (e) => {
-    const files = e.target.files;
-    if (files.length > 0) {
-        handleFile(files[0]);
-    }
-});
+    uploadArea.addEventListener('drop', (e) => {
+        e.preventDefault();
+        uploadArea.classList.remove('dragover');
+
+        const files = e.dataTransfer.files;
+        if (files.length > 0) {
+            handleFile(files[0]);
+        }
+    });
+    uploadArea._hasDragListeners = true;
+}
+
+// Seleção de arquivo (protegido contra duplicação)
+if (!fileInput._hasChangeListener) {
+    fileInput.addEventListener('change', (e) => {
+        const files = e.target.files;
+        if (files.length > 0) {
+            handleFile(files[0]);
+        }
+    });
+    fileInput._hasChangeListener = true;
+}
 
 // Processar arquivo
 async function handleFile(file) {
